--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "node ./node_modules/vite/bin/vite.js dev",
-    "build": "node ./node_modules/vite/bin/vite.js build",
+    "wasm": "wasm-pack build ./wasm/ --target web",
+    "dev": "npm run wasm && node ./node_modules/vite/bin/vite.js dev",
+    "build": "npm run wasm && node ./node_modules/vite/bin/vite.js build",
     "preview": "node ./node_modules/vite/bin/vite.js preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
@@ -17,9 +18,14 @@
     "sass": "^1.62.0",
     "svelte": "^3.57.0",
     "svelte-check": "^2.10.3",
+    "svelte-preprocess": "^5.0.3",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "svelte-preprocess": "^5.0.3"
+    "vite": "^4.3.6"
+  },
+  "dependencies": {
+    "vite-plugin-top-level-await": "^1.3.0",
+    "vite-plugin-wasm": "^3.2.2",
+    "wasm-hyper-chat-connector": "file:wasm/pkg"
   }
 }
