--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,10 @@ dist-ssr
 *.local
 
 # Svelte generated stuff
-./svelte-kit/*
+.svelte-kit/*
 
 # Editor directories and files
 .vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
