Adding new npm script to start the backend as needed

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+# Server connection information
 PUBLIC_SERVER_URL=
 PUBLIC_SOCKET_URL=
+
+# For starting the server container
+DEV_SERVER_DIRECTORY=
