--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "server": "cd `node -r dotenv/config -e \"console.log(process.env.DEV_SERVER_DIRECTORY);\"` && git pull && docker compose up --build",
     "wasm": "wasm-pack build ./wasm/ --target web",
     "dev": "node ./node_modules/vite/bin/vite.js dev",
     "build": "node ./node_modules/vite/bin/vite.js build",
@@ -14,6 +15,7 @@
     "@sveltejs/kit": "^1.15.4",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^4.0.1",
+    "dotenv": "^16.3.1",
     "esbuild-wasm": "^0.17.12",
     "sass": "^1.62.0",
     "svelte": "^3.57.0",
