--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^4.3.6"
   },
   "dependencies": {
+    "svelte-i18n": "^3.7.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
     "wasm-hyper-chat-connector": "file:wasm/pkg"
