updating .env.example (Giphy API key)

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@
 PUBLIC_SERVER_URL=
 PUBLIC_SOCKET_URL=
 
+# Giphy features
+PRIVATE_GIPHY_KEY=
+
 # For starting the server container
 DEV_SERVER_DIRECTORY=
