--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vite": "^4.3.6"
   },
   "dependencies": {
+    "bitfield": "^4.1.0",
+    "json-bigint-native": "^1.2.0",
     "svelte-i18n": "^3.7.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
