--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noUnusedParameters": false,
   },
   "paths": {
     "$lib": [
@@ -27,7 +28,8 @@
     "src/**/*.d.ts",
     "src/**/*.ts",
     "src/**/*.js",
-    "src/**/*.svelte"
+    "src/**/*.svelte",
+    ".svelte-kit/ambient.d.ts",
   ],
   "references": [
     {
