--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^16.3.1",
     "esbuild-wasm": "^0.17.12",
     "sass": "^1.62.0",
-    "svelte": "^3.57.0",
+    "svelte": "^5.0.0-next.143",
     "svelte-check": "^2.10.3",
     "svelte-preprocess": "^5.0.3",
     "tslib": "^2.5.0",
