--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^16.3.1",
     "esbuild-wasm": "^0.17.12",
     "sass": "^1.62.0",
-    "svelte": "^5.0.0-next.143",
+    "svelte": "^4.2.17",
     "svelte-check": "^2.10.3",
     "svelte-preprocess": "^5.0.3",
     "tslib": "^2.5.0",
@@ -28,7 +28,7 @@
   "dependencies": {
     "bitfield": "^4.1.0",
     "json-bigint-native": "^1.2.0",
-    "svelte-i18n": "^3.7.0",
+    "svelte-i18n": "^4.0.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
     "wasm-hyper-chat-connector": "file:wasm/pkg"
