--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,11 @@
     "noUnusedParameters": false,
   },
   "paths": {
-    "$lib": [
-      "src/lib"
-    ],
-    "$lib/*": [
-      "src/lib/*"
-    ]
+    "$lib/*": ["src/lib/*"],
+    "$components/*": ["src/lib/components/*"],
+    "$classes/*": ["src/lib/classes/*"],
+    "$icons/*": ["src/lib/assets/icons/*"],
+    "$stores/*": ["src/lib/stores/*"],
   },
   "include": [
     "src/**/*.d.ts",
