--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "$classes/*": ["src/lib/classes/*"],
     "$icons/*": ["src/lib/assets/icons/*"],
     "$stores/*": ["src/lib/stores/*"],
+    "$styles/*": ["src/styles/*"],
   },
   "include": [
     "src/**/*.d.ts",
